--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -257,15 +257,24 @@
 		\end{tikzpicture}
 	\end{figure*}\\
 	
-	We zullen hieronder bewijzen dat $n=1$ geen congruent getal is. Daarvoor bekijken we eerst een stelling die we gebruiken in het bewijs.
-	\begin{theorem}\label{1:hulp}
+	We zullen hieronder bewijzen dat $n=1$ geen congruent getal is. Daarvoor bekijken we eerst een aantal benodigde stellingen en opmerkingen.
+	\begin{theorem}\label{1:hulp2}
 		Twee positieve gehele getallen die relatief priem zijn en waarvan het product een kwadraat is, moeten zelf kwadraten zijn.
 	\end{theorem}
 	\begin{proof}
-		{\color{red}Anders formuleren.} Neem $x,y\in\NO$ met $\ggd(x,y) = 1$. Stel dat $xy$ een kwadraat is. Laat nu $p$ een priemfactor zijn van $xy$. Dan weten we dat $p \mid x$ of $p \mid y$, maar $p$ deelt niet beide (immers $\ggd(x,y)=1$). We weten dat het aantal factoren $p$ in $xy$ een tweevoud is, omdat $xy$ een kwadraat is. Dat betekent ook dat het aantal factoren $p$ in $x$ \'of in $y$ een tweevoud is. Dit kunnen we doen voor alle priemfactoren van $x$ en $y$. We weten dus dat elke priemfactor precies twee keer voorkomt in $x$ \'of $y$. Dus kunnen we concluderen dat $x$ en $y$ kwadraten zijn. Hiermee is de stelling bewezen.
+		{\color{red}Anders formuleren.} Neem $x,y\in\NO$ met $\ggd(x,y) = 1$. Stel dat $xy$ een kwadraat is. Laat nu $p$ een priemfactor zijn van $x$, maar $p$ is geen priemfactor van $y$. Dan weten we dat $p$ in tweevoud moet voorkomen in $xy$, omdat $xy$ een kwadraat is en omdat $p$ niet in $y$ voorkomt. Hierdoor weten we ook dat $p$ in tweevoud moet voorkomen in $x$. Dus $x$ is een kwadraat. We kunnen dit op dezelfde manier doen voor $y$, dus $y$ is een kwadraat. Hiermee is de stelling bewezen.
 	\end{proof}
 	
-	We moeten nu ook nog iets weten over modulo rekenen. Een even kwadraat is altijd $0 \pmod{4}$. Namelijk; een even getal is $0,2 \pmod{4}$, dus een even kwadraat is $0^2 \equiv 2^2 \equiv 0 \pmod{4}$. Een oneven kwadraat is altijd $1 \pmod{4}$. Namelijk; een oneven getal is $1,3 \pmod{4}$, dus een oneven kwadraat is $1^2 \equiv 3^2 \equiv 1 \pmod{4}$. We zullen nu de onderstaande stelling bewijzen.
+	\begin{remark}\label{1:hulp4}
+		Merk op dat als $xy$ een vierde macht is, dan zijn $x$ en $y$ ook vierde machten. We kunnen dit op dezelfde manier doen als bij stelling \ref{1:hulp2}. Laat $p$ een priemfactor zijn van $x$, maar niet van $y$. Dan weten we dat $p$ in viervoud moet voorkomen in $xy$, omdat $xy$ een vierde macht is en omdat $p$ niet in $y$ voorkomt. Hierdoor weten we ook dat $p$ in viervoud moet voorkomen in $x$. Dus $x$ is een vierde macht. We kunnen dit op dezelfde manier doen voor $y$, dus $y$ is een vierde macht.
+	\end{remark}
+	
+	We moeten nu ook nog iets weten over modulo rekenen.
+	\begin{remark}\label{1:hulpMod}
+		Een even kwadraat is altijd $0 \pmod{4}$. Namelijk; een even getal is $0,2 \pmod{4}$, dus een even kwadraat is $0^2 \equiv 2^2 \equiv 0 \pmod{4}$. Een oneven kwadraat is altijd $1 \pmod{4}$. Namelijk; een oneven getal is $1,3 \pmod{4}$, dus een oneven kwadraat is $1^2 \equiv 3^2 \equiv 1 \pmod{4}$.
+	\end{remark}
+		
+	We zullen nu de onderstaande stelling bewijzen.
 	\begin{theorem}
 		Het getal $n=1$ is geen congruent getal.
 	\end{theorem}
@@ -281,7 +290,7 @@
 		
 		Laat $(a, b, c, d)$ een oplossing zijn met $\ggd(a,b) = 1$ en $c$ minimaal. We construeren een nieuw viertal $a', b', c', d' \in\NO$ die voldoet aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$ en $0 < c' < c$. Dit geeft een tegenspraak met de aanname dat $c$ minimaal is.\\
 		
-		Omdat er geldt dat $ab = 2d^2$ en $\ggd(a,b)=1$, weten we dat $a$ \'of $b$ even is, maar niet beide. Daaruit volgt dat $c^2 = a^2 + b^2$ oneven is, waaruit volgt dat $c$ oneven is. We kunnen zonder verlies van algemeenheid zeggen dat $a$ even en $b$ oneven is. We kunnen, vanwege stelling \ref{1:hulp}, nu schrijven
+		Omdat er geldt dat $ab = 2d^2$ en $\ggd(a,b)=1$, weten we dat $a$ \'of $b$ even is, maar niet beide. Daaruit volgt dat $c^2 = a^2 + b^2$ oneven is, waaruit volgt dat $c$ oneven is. We kunnen zonder verlies van algemeenheid zeggen dat $a$ even en $b$ oneven is. We kunnen, vanwege stelling \ref{1:hulp2}, nu schrijven
 		\begin{equation*}
 			a = 2k^2 \quad \text{en} \quad b = l^2
 		\end{equation*}
@@ -293,7 +302,7 @@
 		\begin{equation*}
 			b = r^4 - s^4 \quad \text{en} \quad c = r^4 + s^4,
 		\end{equation*}
-		waaruit volgt dat $l^2 = b = (r^2 + s^2) (r^2 - s^2)$. De twee factoren $(r^2 + s^2)$ en $(r^2 - s^2)$ zijn relatief priem. {\color{red}Onduidelijk.} Verder weten we dat een eventuele gemene deler oneven zou zijn, omdat $l$ oneven is. Bovendien moet de gemene deler de som, $2r^2$, en het verchil, $s^2$, van de twee factoren delen. Hieruit volgt dat $\ggd(r^2,s^2) = 1$. {\color{red}Onduidelijk.} We weten dat het product van de genoemde twee factoren een oneven kwadraat is. Het eerste factor, $r^2 + s^2$, is sowieso positief. Omdat het product ook positief is, geldt er dat $r^2 - s^2$ ook positief is. Vanwege stelling \ref{1:hulp} kunnen we nu schrijven 
+		waaruit volgt dat $l^2 = b = (r^2 + s^2) (r^2 - s^2)$. De twee factoren $(r^2 + s^2)$ en $(r^2 - s^2)$ zijn relatief priem. {\color{red}Onduidelijk.} Verder weten we dat een eventuele gemene deler oneven zou zijn, omdat $l$ oneven is. Bovendien moet de gemene deler de som, $2r^2$, en het verchil, $s^2$, van de twee factoren delen. Hieruit volgt dat $\ggd(r^2,s^2) = 1$. {\color{red}Onduidelijk.} We weten dat het product van de genoemde twee factoren een oneven kwadraat is. Het eerste factor, $r^2 + s^2$, is sowieso positief. Omdat het product ook positief is, geldt er dat $r^2 - s^2$ ook positief is. Vanwege stelling \ref{1:hulp2} kunnen we nu schrijven 
 		\begin{equation}\label{1:r}
 			t^2 = r^2 + s^2 \quad \text{en} \quad u^2 = r^2 - s^2
 		\end{equation}
