--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -262,7 +262,7 @@
 		Twee positieve gehele getallen die relatief priem zijn en waarvan het product een kwadraat is, moeten zelf kwadraten zijn.
 	\end{theorem}
 	\begin{proof}
-		{\color{red}Anders formuleren.} Neem $x,y\in\NO$ met $\ggd(x,y) = 1$. Stel dat $xy$ een kwadraat is. Laat nu $p$ een priemfactor zijn van $x$, maar $p$ is geen priemfactor van $y$. Dan weten we dat $p$ in tweevoud moet voorkomen in $xy$, omdat $xy$ een kwadraat is en omdat $p$ niet in $y$ voorkomt. Hierdoor weten we ook dat $p$ in tweevoud moet voorkomen in $x$. Dus $x$ is een kwadraat. We kunnen dit op dezelfde manier doen voor $y$, dus $y$ is een kwadraat. Hiermee is de stelling bewezen.
+		Neem $x,y\in\NO$ met $\ggd(x,y) = 1$. Stel dat $xy$ een kwadraat is. Laat nu $p$ een priemfactor zijn van $x$, maar $p$ is geen priemfactor van $y$. Dan weten we dat $p$ in tweevoud moet voorkomen in $xy$, omdat $xy$ een kwadraat is en omdat $p$ niet in $y$ voorkomt. Hierdoor weten we ook dat $p$ in tweevoud moet voorkomen in $x$. Dus $x$ is een kwadraat. We kunnen dit op dezelfde manier doen voor $y$, dus $y$ is een kwadraat. Hiermee is de stelling bewezen.
 	\end{proof}
 	
 	\begin{remark}\label{1:hulp4}
@@ -284,29 +284,29 @@
 		\begin{equation}\label{1:gedefineerd}
 			a^2 + b^2 = c^2 \quad \text{en} \quad ab = 2d^2.
 		\end{equation}
-		We gaan nu laten zien dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft.\\
+		We gaan laten zien dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft.\\
 		
-		Stel dat (\ref{1:gedefineerd}) een oplossing heeft in $\NO$, zeg $(a, b, c, d)$. Dan zullen we nu bewijzen dat er een oplossing is zodat $a$ en $b$ relatief priem zijn. Stel $\ggd(a,b) = g$. Dan weten we dat $g \mid a$ en $g \mid b$. Hieruit volgen twee resultaten samen met (\ref{1:gedefineerd}). Ten eerste weten we nu dat $g^2 \mid a^2$ en $g^2 \mid b^2$. Hieruit volgt dat $g^2 \mid a^2 + b^2$, dus $g^2 \mid c^2$, wat betekent dat $g \mid c$. Ten tweede weten we dat $g^2 \mid ab$, dus $g^2 \mid 2d^2$, waaruit volgt dat $g^2 \mid d^2$, met de volgende reden: Omdat $g^2 \mid 2d^2$, weten we dat $2\frac{d^2}{g^2} = x \in\NN$. Omdat $\frac{d^2}{g^2}$ een kwadraat is, weten we dat het een even aantal factoren $2$ bevat (omdat $\frac{d^2}{g^2}\in\QQ$ kan dit in principe ook een negatief aantal factoren 2 zijn). Dan bevat $2\frac{d^2}{g^2} = x$ dus een oneven aantal factoren $2$. Omdat er geldt dat $x \in\NN$ en het een oneven aantal factoren 2 heeft, is $x$ een even getal. Nu kunnen we de vergelijking dus delen door $2$. Dit geeft ons $\frac{d^2}{g^2}=\frac{x}{2} \in\NN$. We weten nu dat $g^2 \mid d^2$. Hieruit volgt dat $g \mid d$. We weten nu dus dat $g \mid a$, $g \mid b$, $g \mid c$ en $g \mid d$. We kunnen dus alle zijden door $g$ delen zodat we $a'$, $b'$, $c'$ en $d'$ krijgen die voldoen aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$. Dan gaan we nu verder met bewijzen dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft, met de extra voorwaarde dat $\ggd(a,b) = 1$.\\
+		Stel dat (\ref{1:gedefineerd}) een oplossing heeft in $\NO$, zeg $(a, b, c, d)$. Dan zullen we nu bewijzen dat er een oplossing is zodat $a$ en $b$ relatief priem zijn. Stel $\ggd(a,b) = g$. Dan weten we dat $g \mid a$ en $g \mid b$. Hieruit volgen twee resultaten samen met (\ref{1:gedefineerd}). Ten eerste weten we dat $g^2 \mid a^2$ en $g^2 \mid b^2$. Hieruit volgt dat $g^2 \mid a^2 + b^2$, dus $g^2 \mid c^2$, wat betekent dat $g \mid c$. Ten tweede weten we dat $g^2 \mid ab$, dus $g^2 \mid 2d^2$, waaruit volgt dat $g^2 \mid d^2$, met de volgende reden: Omdat $g^2 \mid 2d^2$, weten we dat $2\frac{d^2}{g^2} = x \in\NN$. Omdat $\frac{d^2}{g^2}$ een kwadraat is, weten we dat het een even aantal factoren $2$ bevat (omdat $\frac{d^2}{g^2}\in\QQ$ kan dit in principe ook een negatief aantal factoren 2 zijn). Dan bevat $2\frac{d^2}{g^2} = x$ dus een oneven aantal factoren $2$. Omdat er geldt dat $x \in\NN$ en omdat het een oneven aantal factoren 2 heeft, is $x$ een even getal. We kunnen de vergelijking aan beide kanten door $2$ delen. Dit geeft ons $\frac{d^2}{g^2}=\frac{x}{2} \in\NN$. Dus $g^2 \mid d^2$. Hieruit volgt dat $g \mid d$. We weten nu dus dat $g \mid a$, $g \mid b$, $g \mid c$ en $g \mid d$. We kunnen dus alle zijden door $g$ delen zodat we $a'$, $b'$, $c'$ en $d'$ krijgen die voldoen aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$. Er is dus een oplossing $(a,b,c,d)$ voor vergelijking (\ref{1:gedefineerd}), zodat $\ggd(a,b)=1$. We gaan nu verder met bewijzen dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft, met de extra voorwaarde dat $\ggd(a,b) = 1$.\\
 		
-		Laat $(a, b, c, d)$ een oplossing zijn met $\ggd(a,b) = 1$ en $c$ minimaal. We construeren een nieuw viertal $a', b', c', d' \in\NO$ die voldoet aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$ en $0 < c' < c$. Dit geeft een tegenspraak met de aanname dat $c$ minimaal is.\\
+		Laat $(a, b, c, d)$ een oplossing zijn met $\ggd(a,b) = 1$ en $c$ minimaal. Om te bewijzen dat de stelling waar is, zullen een nieuw viertal $a', b', c', d' \in\NO$ construeren, die voldoet aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$ en $0 < c' < c$. Dit geeft een tegenspraak met de aanname dat $c$ minimaal is.\\
 		
-		Omdat er geldt dat $ab = 2d^2$ en $\ggd(a,b)=1$, weten we dat $a$ \'of $b$ even is, maar niet beide. Daaruit volgt dat $c^2 = a^2 + b^2$ oneven is, waaruit volgt dat $c$ oneven is. We kunnen zonder verlies van algemeenheid zeggen dat $a$ even en $b$ oneven is. We kunnen, vanwege stelling \ref{1:hulp2}, nu schrijven
+		Er geldt dat $ab = 2d^2$ en $\ggd(a,b)=1$, waardoor we weten dat $a$ \'of $b$ even is, maar niet beide. Hieruit volgt dat $c^2 = a^2 + b^2$ oneven is, waaruit volgt dat $c$ oneven is. We kunnen zonder verlies van algemeenheid zeggen dat $a$ even en dat $b$ oneven is. We kunnen, vanwege stelling \ref{1:hulp2}, nu stellen dat
 		\begin{equation*}
 			a = 2k^2 \quad \text{en} \quad b = l^2
 		\end{equation*}
-		voor $k,l\in\NO$ met $l$ oneven (omdat $b$ oneven is). Als we dit invullen in (\ref{1:gedefineerd}), krijgen we de vergelijking $4k^4 + b^2 = c^2$. Hieruit volgt, door factorisatie, dat $k^4 = \frac{c+b}{2}\frac{c-b}{2}$. We weten dat $b$ en $c$ beide oneven en relatief priem zijn, want als $c$ en $b$ niet relatief priem zijn, dan geldt er dat $\ggd(a,b)\neq1$ door $a^2 = c^2 - b^2$. Hieruit volgt dat $\frac{c+b}{2}$ en $\frac{c-b}{2}$ relatief priem zijn. {\color{red}Waarom?} We defini\"eren nu
-		\begin{equation*}
+		voor $k,l\in\NO$ met $l$ oneven (omdat $b$ oneven is). Als we $a = 2k^2$ invullen in (\ref{1:gedefineerd}), krijgen we de vergelijking $4k^4 + b^2 = c^2$. Hieruit volgt, door factorisatie, dat $k^4 = \frac{c+b}{2}\frac{c-b}{2}$. We weten dat $b$ en $c$ beide oneven en relatief priem zijn, want als $c$ en $b$ niet relatief priem zijn, dan geldt er dat $\ggd(a,b)\neq1$ door $a^2 = c^2 - b^2$. We kunnen nu ook zeggen dat $\frac{c+b}{2}$ en $\frac{c-b}{2}$ relatief priem zijn, want stel $\ggd(\frac{c+b}{2},\frac{c-b}{2})=g$, dan geldt er dat $g$ de som deelt: $g \mid c$ en dat $g$ het verschil deelt: $g \mid b$. Aangezien $\ggd(b,c) = 1$, geldt er ook dat $\ggd(\frac{c+b}{2}, \frac{c-b}{2}) = 1$. We defini\"eren nu
+		\begin{equation}\label{1:bc}
 			r^4 = \frac{c+b}{2} \quad \text{en} \quad s^4 = \frac{c-b}{2}
-		\end{equation*}
-		voor positieve gehele getallen $r$ en $s$ die relatief priem zijn. {\color{red}Stelling 5 maar dan met viervoud ipv tweevoud.} Dit lossen we op voor $b$ en $c$, wat ons de volgende resultaten geeft:
+		\end{equation}
+		voor positieve gehele getallen $r$ en $s$ die relatief priem zijn, dit kan volgens opmerking \ref{1:hulp4}. Er geldt ook dat $r^4$ en $s^4$ relatief priem zijn, dus $r^2$ en $s^2$ zijn relatief priem en ook $r$ en $s$ zijn relatief priem. We lossen nu vergelijking (\ref{1:bc}) op voor $b$ en $c$, wat ons de volgende resultaten geeft:
 		\begin{equation*}
 			b = r^4 - s^4 \quad \text{en} \quad c = r^4 + s^4,
 		\end{equation*}
-		waaruit volgt dat $l^2 = b = (r^2 + s^2) (r^2 - s^2)$. De twee factoren $(r^2 + s^2)$ en $(r^2 - s^2)$ zijn relatief priem. {\color{red}Onduidelijk.} Verder weten we dat een eventuele gemene deler oneven zou zijn, omdat $l$ oneven is. Bovendien moet de gemene deler de som, $2r^2$, en het verchil, $s^2$, van de twee factoren delen. Hieruit volgt dat $\ggd(r^2,s^2) = 1$. {\color{red}Onduidelijk.} We weten dat het product van de genoemde twee factoren een oneven kwadraat is. Het eerste factor, $r^2 + s^2$, is sowieso positief. Omdat het product ook positief is, geldt er dat $r^2 - s^2$ ook positief is. Vanwege stelling \ref{1:hulp2} kunnen we nu schrijven 
+		waaruit volgt dat $l^2 = b = (r^2 + s^2) (r^2 - s^2)$. De twee factoren $(r^2 + s^2)$ en $(r^2 - s^2)$ zijn relatief priem, want stel dat $ggd(r^2 + s^2, r^2 - s^2) = g$, dan weten we in ieder geval dat $g$ oneven is, omdat $b = r^4 - s^4$ en $c = r^4 + s^4$ oneven zijn. We weten ook dat $g$ de som deelt: $g \mid 2r^2$ en dat $g$ het verschil deelt: $g \mid 2s^2$. Omdat $g$ oneven is, kan $g$ niet $2$ delen, dat betekent dus dat $g \mid r^2$ en $g \mid s^2$, dit is in tegenspraak met het feit dat $\ggd(r^2, s^2) = 1$. Dus de twee factoren $(r^2 + s^2)$ en $(r^2 - s^2)$ zijn relatief priem. De eerste factor, $r^2 + s^2$, is sowieso positief. Omdat het product ook positief is, geldt er dat $r^2 - s^2$ ook positief is. Vanwege stelling \ref{1:hulp2} kunnen we nu schrijven 
 		\begin{equation}\label{1:r}
 			t^2 = r^2 + s^2 \quad \text{en} \quad u^2 = r^2 - s^2
 		\end{equation}
-		voor oneven positieve gehele getallen $t$ en $u$ die relatief priem zijn. Omdat $u$ oneven is, geldt er dat $u^2 \equiv 1 \pmod{4}$, dus $r^2 - s^2 \equiv 1 \pmod{4}$. Hieruit volgt dat $r$ oneven is, dus is $s$ even. Namelijk: Er moet gelden dat $r$ en $s$ verschillende pariteit hebben, want anders geldt er dat $r^2 - s^2 \equiv 0 \pmod{4}$. Stel nu dat $r$ is even, dan is $s$ oneven. Er geldt nu dat $r^2 \equiv 0 \pmod{4}$ en $s^2 \equiv 1 \pmod{4}$. Dit levert op: $r^2 - s^2 \equiv -1 \equiv 3 \pmod{4}$ en dat kan niet. We weten dus dat $r$ oneven is en dat $s$ even is. Nu lossen we  (\ref{1:r}) op voor $r^2$. Dit geeft ons:
+		voor oneven positieve gehele getallen $t$ en $u$, waarvoor geldt dat deze ook relatief priem zijn. We gebruiken nu opmerking \ref{1:hulpMod}; omdat $u$ oneven is, geldt er dat $u^2 \equiv 1 \pmod{4}$, dus $r^2 - s^2 \equiv 1 \pmod{4}$. Hieruit volgt dat $r$ oneven is, dus is $s$ even. Namelijk: Er moet gelden dat $r$ en $s$ verschillende pariteit hebben, want anders geldt er dat $r^2 - s^2 \equiv 0 \pmod{4}$. Stel nu dat $r$ is even, dan is $s$ oneven. Er geldt nu dat $r^2 \equiv 0 \pmod{4}$ en $s^2 \equiv 1 \pmod{4}$. Dit levert op: $r^2 - s^2 \equiv -1 \equiv 3 \pmod{4}$ en dat kan niet. We weten dus dat $r$ oneven is en dat $s$ even is. Nu lossen we  (\ref{1:r}) op voor $r^2$. Dit geeft ons:
 		\begin{equation*}
 			r^2 = \frac{t^2 + u^2}{2} = \left( \frac{t+u}{2} \right)^2 + \left( \frac{t-u}{2} \right)^2,
 		\end{equation*}
@@ -314,7 +314,7 @@
 		\begin{equation*}
 			a' = \frac{t+u}{2}, \quad b' = \frac{t-u}{2} \quad \text{en} \quad c' = r.
 		\end{equation*}
-		Omdat er geldt dat $\ggd(t,u) = 1$ , geldt er nu ook dat $\ggd(a',b') = 1$. {\color{red}Hetzelfde onduidelijke probleem.} Als we gebruik maken van (\ref{1:r}), vinden we dat $a'b' = \frac{t^2 - u^2}{4} = \frac{2s^2}{4} = 2\left( \frac{s}{2} \right)^2$. Laat $d' = \frac{s}{2} \in\ZZ$, dan hebben we een nieuwe oplossing $(a', b', c', d')$ voor (\ref{1:gedefineerd}). Er geldt dat $0 < c'= r \leq r^4 < r^4 + s^4 = c$. Dit geeft een tegenspraak, omdat $c$ minimaal is. Dus (\ref{1:gedefineerd}) heeft geen gehele positieve oplossingen, dus $n=1$ is niet congruent.
+		Er geldt dat $\ggd(a',b') = 1$, om dezelfde reden dat de eerder genoemde factoren $\frac{c+b}{2}$ en $\frac{c-b}{2}$ relatief priem zijn. Als we gebruik maken van (\ref{1:r}), vinden we dat $a'b' = \frac{t^2 - u^2}{4} = \frac{2s^2}{4} = 2\left( \frac{s}{2} \right)^2$. Laat $d' = \frac{s}{2} \in\ZZ$, dan hebben we nu een nieuwe oplossing $(a', b', c', d')$ voor (\ref{1:gedefineerd}). Er geldt dat $0 < c'= r \leq r^4 < r^4 + s^4 = c$. Dit geeft een tegenspraak, omdat $c$ minimaal is. Dus (\ref{1:gedefineerd}) heeft geen positieve gehele oplossingen, dus $n=1$ is niet congruent.
 	\end{proof}
 
 
